chore(init): Init

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-npm-debug.log
+build/
 node_modules
+.DS_Store
+.idea/
+atlassian-ide-plugin.xml
