--- a/package.json
+++ b/package.json
@@ -3,40 +3,6 @@
     "description": "A log4js-node log appender to write logs into MongoDB.",
     "version": "0.1.0",
     "homepage": "https://github.com/litixsoft/log4js-node-mongodb",
-    "author": {
-        "name": "Litixsoft GmbH",
-        "email": "info@litixsoft.de"
-    },
-    "maintainers": [
-        {
-            "name": "Timo Liebetrau",
-            "email": "t.liebetrau@litixsoft.de"
-        },
-        {
-            "name": "Thomas Heinrich Linke",
-            "email": "t.heinrich-linke@litixsoft.de"
-        },
-        {
-            "name": "Marco Kannenberg",
-            "email": "m.kannenberg@litixsoft.de"
-        },
-        {
-            "name": "Andreas Krummsdorf",
-            "email": "a.krummsdorf@litixsoft.de"
-        },
-        {
-            "name": "Sven Bernstein",
-            "email": "s.bernstein@litixsoft.de"
-        },
-        {
-            "name": "Thomas Scheibe",
-            "email": "th.scheibe@litixsoft.de"
-        },
-        {
-            "name": "Domonic Sachs",
-            "email": "d.sachs@litixsoft.de"
-        }
-    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/litixsoft/log4js-node-mongodb.git"
@@ -44,6 +10,13 @@
     "bugs": {
         "url": "https://github.com/litixsoft/log4js-node-mongodb/issues"
     },
+    "author": "Litixsoft GmbH <info@litixsoft.de> (http://www.litixsoft.de)",
+    "maintainers": [
+        "Andreas Krummsdorf <a.krummsdorf@litixsoft.de>"
+    ],
+    "contributors": [
+        "Max Nachlinger"
+    ],
     "keywords": [
         "log4js",
         "mongo",
@@ -51,17 +24,19 @@
         "logging",
         "log"
     ],
-    "license": "The MIT License (MIT)",
+    "license": "MIT",
     "licenses": [
         {
             "type": "MIT",
             "url": "https://github.com/litixsoft/log4js-node-mongodb/blob/master/LICENSE"
         }
     ],
-    "readmeFilename": "README.md",
     "main": "lib/index.js",
     "scripts": {
         "test": "grunt test"
+    },
+    "directories": {
+        "lib": "./lib"
     },
     "devDependencies": {
         "grunt": "0.4.2",
