--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,10 @@ language: node_js
 node_js:
   - '0.8'
   - '0.10'
+  - '0.12'
+  - 'iojs'
 before_script:
   - npm install -g grunt-cli
+matrix:
+  allow_failures:
+  - node_js: '0.11'
