--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
         "lib": "./lib"
     },
     "devDependencies": {
-        "grunt": "0.4.2",
-        "grunt-bg-shell": "~2.3.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.7.2",
-        "grunt-jasmine-node": "0.1.0",
-        "grunt-open": "~0.2.2",
-        "istanbul": "~0.2.1",
-        "load-grunt-tasks": "~0.2.1"
+        "grunt": "0.4.5",
+        "grunt-bg-shell": "^2.3.1",
+        "grunt-contrib-clean": "^0.6.0",
+        "grunt-contrib-jshint": "^0.11.1",
+        "grunt-jasmine-node": "^0.3.1",
+        "grunt-open": "^0.2.3",
+        "istanbul": "^0.3.13",
+        "load-grunt-tasks": "^3.1.0"
     },
     "dependencies": {
-        "log4js": "~0.6.9",
-        "mongojs": "~0.9.10"
+        "log4js": "^0.6.22",
+        "mongojs": "0.9.10"
     }
 }
