--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ node_js:
   - '0.10'
   - '0.12'
   - 'iojs'
+before_install:
+  - npm install -g npm@'>=1.4.3'
 before_script:
   - npm install -g grunt-cli
 matrix:
