feat: replace keys when logging an object to prevent mongo exception
* $ is converted to "_dollar_" (only replaced at start of key)
* . is converted to "_dot_" (all occurrences are replaced)

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     },
     "dependencies": {
         "log4js": "^0.6.22",
+        "lx-helpers": "^0.5.1",
         "mongojs": "0.9.10"
     }
 }
