--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "devDependencies": {
         "grunt": "0.4.5",
         "grunt-bg-shell": "^2.3.1",
-        "grunt-contrib-clean": "^0.6.0",
-        "grunt-contrib-jshint": "^0.11.2",
+        "grunt-contrib-clean": "^0.7.0",
+        "grunt-contrib-jshint": "^0.12.0",
         "grunt-jasmine-node": "^0.3.1",
         "grunt-open": "^0.2.3",
-        "istanbul": "^0.3.15",
+        "istanbul": "^0.4.2",
+        "jasmine-node": "1.14.5",
         "load-grunt-tasks": "^3.2.0"
     },
     "dependencies": {
