--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
+sudo: false
 services:
   - mongodb
 language: node_js
 node_js:
   - '0.10'
   - '0.12'
-  - 'iojs'
+  - '4'
+  - '5'
 before_script:
   - npm install -g grunt-cli
-matrix:
-  allow_failures:
-  - node_js: '0.11'
