--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,15 @@ language: node_js
 cache:
   directories:
     - node_modules
+os:
+  - osx
+  - linux
 node_js:
   - '0.10'
   - '0.12'
   - '4'
   - '5'
   - '6'
+  - 'stable'
 before_script:
   - npm install -g grunt-cli
