--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "log4js-node-mongodb",
     "description": "A log4js-node log appender to write logs into MongoDB.",
-    "version": "2.0.0",
+    "version": "2.1.0",
     "homepage": "https://github.com/litixsoft/log4js-node-mongodb",
     "repository": {
         "type": "git",
@@ -16,7 +16,8 @@
     ],
     "contributors": [
         "Max Nachlinger",
-        "Ilya Starostin"
+        "Ilya Starostin",
+        "Adam Ball"
     ],
     "keywords": [
         "log4js",
@@ -52,8 +53,8 @@
         "load-grunt-tasks": "^3.5.0"
     },
     "dependencies": {
-        "log4js": "^0.6.37",
+        "log4js": "^0.6.38",
         "lx-helpers": "^0.5.1",
-        "mongodb": "2.1.18"
+        "mongodb": "2.2.4"
     }
 }
